v2.0: mapper dropdown, decrement buttons, GridBag layout, UI fixes